--- a/section5/Dockerfile
+++ b/section5/Dockerfile
@@ -1,11 +1,7 @@
 FROM python:3.12
-
 EXPOSE 5001
-
 WORKDIR /app
-
-RUN pip install flask
-
-COPY . /app/
-
+COPY requirements.txt /app/
+RUN pip install -r requirements.txt
+COPY . .
 CMD ["flask","run", "--host", "0.0.0.0"]
